--- a/sr-extra.cabal
+++ b/sr-extra.cabal
@@ -85,6 +85,7 @@ Library
     Extra.Either,
     Extra.EnvPath,
     Extra.ErrorControl,
+    Extra.ErrorControlInstances,
     Extra.ErrorSet,
     Extra.Except,
     Extra.Exit,
