--- a/sr-extra.cabal
+++ b/sr-extra.cabal
@@ -109,6 +109,8 @@ Library
     Extra.Orphans3,
     Extra.Pretty,
     Extra.QuickCheck,
+    Extra.SafeCopy,
+    Extra.Serialize,
     Extra.Text,
     Extra.TH,
     Extra.Time,
@@ -118,9 +120,7 @@ Library
     Extra.Verbosity
   if impl (ghc >= 8.6)
     Exposed-modules:
-      Extra.Errors,
-      Extra.SafeCopy,
-      Extra.Serialize
+      Extra.Errors
   if !impl(ghcjs)
     Build-Depends:
       show-please,
